<resources>
    <string name="places_api_billing_key" translatable="false">AIzaSyAald9D0wdy86pmbTX1vWc9KMc-FXx3wzQ</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoidXNhbWEtYW1hbiIsImEiOiJjazU1NGtyY2QwYTZiM2VtcW9wamQ3NmRkIn0.owDuMMZwfgXLED5Hry17yw</string>
    <string name="stripe__key" translatable="false">pk_live_K9xMzsJIVL58G0I9WBLvgtXQ006zizbseE</string>
    <string name="test_stripe__key" translatable="false">pk_test_51H06jcG8n0P9fHSa9E2Ji6Nz6crrvC5307J7Y1YyHhVv7kTKCQZAflCMWnDgYr9DS0kr9IOH6WbgvWhv5dRsXGMK00OcnRgJsr</string>
    <string name="parnership">Parnership</string>
    <string name="sign_in_title">Connection</string>
    <string name="SignInEmail">Email</string>
    <string name="SignInPassword">Password</string>
    <string name="signInToLogIn">Login</string>
    <string name="SignInForgotYourPassword">Forgot your password?</string>
    <string name="signInDontHaveAnAccount">Don\'t have an account?</string>
    <string name="signInRegisterNow">Register now</string>
    <string name="signInEnable_biometric_login">Biometric login</string>
    <string name="signInErrorMessageEnterEmail">Please enter email address.</string>
    <string name="signInErrorMessageEnterPassword">Please enter password</string>
    <string name="signInTouch_rear_sensor">Touch your rear sensor to login using finger print.</string>
    <string name="signInErrorMessagePlease_login_at_least_one_time">Please log in at least one time to use finger print</string>
    <string name="register">Register</string>
    <string name="SignUpName">First Name</string>
    <string name="SignUpLastName">Last Name</string>
    <string name="SignUpEmail">Email</string>
    <string name="SignUpTelephone">Phone Number</string>
    <string name="SignUpSirenNo">Siren Number</string>
    <string name="SignUpCompanyName">Company</string>
    <string name="SignUpKbisPicture">KBIS</string>
    <string name="SignUpIdPicture">ID</string>
    <string name="signUpPassword">Password</string>
    <string name="SignUpConfirmPassword">Confirm Password</string>
    <string name="SignUpCreateMyAccount">Register now</string>
    <string name="SignUpAlreadyHaveAnAccount">Already have an account?</string>
    <string name="signUpLoginNow"> Login now</string>
    <string name="SignUPToLogIn">To Log In</string>
    <string name="SignUpErrorMessageEnter_name">Please enter name</string>
    <string name="SignUpErrorMessageEnterLastName">Please enter last name</string>
    <string name="SignUpErrorMessageInvalidEmail">Email is not valid</string>
    <string name="SignUpErrorMessageEnterEmail">Please enter email address.</string>
    <string name="SignUpErrorMessageEnterPassword">Please enter password</string>
    <string name="SignUpErrorMessageEnter_password_confirmation">Please enter confirm password</string>
    <string name="SignUpErrorMessagePlease_enter_phone_number">Please enter phone number</string>
    <string name="SignUpErrorMessageEnter_company_name">Please enter company name</string>
    <string name="SignUpErrorMessageEnter_siret_number">Please enter siret number</string>
    <string name="SignUpErrorMessageSiren_numer_must_be_equal_to_9">Siret number must be equal to 9</string>
    <string name="SignUpErrorMessagePlease_add_kbis_image_msg">Please add KBIS</string>
    <string name="SignUpErrorMessagePlease_add_id_image_msg">Please add ID</string>
    <string name="SignUpErrorMessagePassword_length">The password must be atleast 8 characters</string>
    <string name="SignUpErrorMessagePassword_not_same">Confirm password does not match.</string>
    <string name="SignUpAcceptTermsText">I accept the terms and conditions</string>
    <string name="signUp_error_privacy">Please accept terms and condition.</string>
    <string name="forgotPasswordTitle">Forgot Password</string>
    <string name="forgotPasswordEmailOrPhone">Email or Mobile number </string>
    <string name="forgotPasswordSend_me">Send</string>
    <string name="forgotPasswordFormatNote">Note: Mobile number format must be like +33109758351</string>
    <string name="forgotPasswordErrorMessageEnterEmail">Please enter email address or mobile number.</string>
    <string name="reset_password">Reset Password</string>
    <string name="OTP">OTP</string>
    <string name="resetPasswordNewPassword">New Password</string>
    <string name="resetPasswordConfirmPassword">Confirm Password</string>
    <string name="reset">Reset Password</string>
    <string name="resetPasswordErrorMessagePlease_enter_the_verification_code">Please enter the verification code</string>
    <string name="resetPasswordErrorMessageEnterPassword">Please enter password</string>
    <string name="resetPasswordErrorMessageEnter_password_confirmation">Please enter confirm password</string>
    <string name="resetPasswordErrorMessagePassword_not_same">Confirm password does not match.</string>
    <string name="OtpConfirmationTitle">Confirmation</string>
    <string name="OtpConfirmationMessage">A confirmation SMS has just been sent to you to validate your account. Please enter the 4 digits:</string>
    <string name="OtpConfirmationErrorMessageYou_have_not_received_the_sms">You have not received the SMS?</string>
    <string name="OtpConfirmationSendMeBack">Send</string>
    <string name="OtpConfirmationToLogIn">To Log In</string>
    <string name="OtpConfirmationErrorMessagePlease_enter_the_verification_code">Please enter the verification code</string>
    <string name="EmailConfirmationTitle">Confirmation</string>
    <string name="EmailConfirmationMessage">A confirmation email has been sent to you to validate your account. Please consult your mailbox and follow the indicated instructions.</string>
    <string name="EmailConfirmationErrorMessageYou_have_not_received_the_mail">You have not received the mail?</string>
    <string name="emailConfirmationSendMeBack">Send</string>
    <string name="EmailConfirmationToLogIn">To Log In</string>
    <string name="catalog">Catalog</string>
    <string name="research">Search</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="my_products">My Products</string>
    <string name="favorites">Favorites</string>
    <string name="bio">Bio</string>
    <string name="from">from</string>
    <string name="productListMerchants">Merchants</string>
    <string name="productListMerchant">Merchant</string>
    <string name="productDetailFrom">from</string>
    <string name="you_have_stock">You have stock?</string>
    <string name="marchants">Merchants</string>
    <string name="marchant">Merchant</string>
    <string name="to_sell">To sell</string>
    <string name="buy">Buy</string>
    <string name="product_has_no_seller">This Product has no Merchant.</string>
    <string name="you_are_not_marchant">Sorry you are not a merchant… Only merchants can sell products</string>
    <string name="purchase_form">PURCHASE FORM</string>
    <string name="purchaseFrom">from</string>
    <string name="puchaseFormProduct_from_organic_farming">Product from organic farming</string>
    <string name="the_product_comes_from_organic_farming">The product comes from organic farming.</string>
    <string name="the_seller_is_open_to_negotiation">The seller is open to negotiation.</string>
    <string name="purchaseFormSellerChoice">Seller\'s Choice</string>
    <string name="purchaseFormSeller">Seller</string>
    <string name="purchaseFormNote">Note</string>
    <string name="purchaseFormPrice">Price</string>
    <string name="purchaseFormInventory_of_vendor">Inventory  of vendor: %s</string>
    <string name="purchaseFormPerKg">per %s</string>
    <string name="buyingFrom">from</string>
    <string name="is_the_minimum_you_can_buy"> is the minimum you can buy</string>
    <string name="subProductSize">Size : %s</string>
    <string name="subProductClass">Class : %s</string>
    <string name="subProductPrice">Price/%s : </string>
    <string name="select_quantity">Select Quantity</string>
    <string name="desired_quantity">Desired Quantity</string>
    <string name="buyingPerUnit">per %s</string>
    <string name="buyingTotalPrice">Total Price</string>
    <string name="do_you_want_to_negotiate">Do you want to negotiate?</string>
    <string name="not_in_stock">Not in Stock</string>
    <string name="this_seller_does_not_have_enough_stock">This seller does not have enough stock</string>
    <string name="negoTitle">Summary</string>
    <string name="negoProduct">Product</string>
    <string name="negoQuantity">Quantity</string>
    <string name="negoPrice">Price</string>
    <string name="negoTotalPrice">Total Price</string>
    <string name="negoSend_my_proposal">Send my proposal</string>
    <string name="negoAdd_address">Delivery address</string>
    <string name="you_have">You have</string>
    <string name="x_tries"> tries left in </string>
    <string name="in_minutes"> minutes</string>
    <string name="le_vender">The seller</string>
    <string name="open_to_negotiate">is open to negotiation</string>
    <string name="order_has_been_cancelled">Order has been cancelled.</string>
    <string name="nego_delivery_charges">Delivery Charges</string>
    <string name="yourPrice">Your price:</string>
    <string name="proposalPrice">Proposal:</string>
    <string name="product_proposal">Product Proposal</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel_and_go_back_to_orders">Cancel and go back to orders</string>
    <string name="negoDestination">Destination</string>
    <string name="negoPriceErrorMessage">Please enter price</string>
    <string name="nego_add_shipping_address">Please add delivery address</string>
    <string name="cartTitle">Basket</string>
    <string name="cartProduct">Product</string>
    <string name="cartQuantity">Quantity</string>
    <string name="cartPrice">Price</string>
    <string name="carttotal_ht">Total HT</string>
    <string name="carttva">VAT</string>
    <string name="carttotal_tcc">Total TTC</string>
    <string name="cartAdd_address">Delivery address</string>
    <string name="select_a_delivery_type">Select a delivery type</string>
    <string name="shared_delivery">Shared delivery</string>
    <string name="fast_delivery">Fast delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="discount_on_product">Discount %s</string>
    <string name="confirm_cart">Validate the basket</string>
    <string name="cartDiscount">Discount</string>
    <string name="cartSoldBy">Sold by</string>
    <string name="cart_delivery_charges">Delivery Charges</string>
    <string name="do_you_want_to_take_coverage">Do you want to take coverage?</string>
    <string name="cartDestination">Destination</string>
    <string name="cartAddressText">Address</string>
    <string name="cartDateText">Delivery Date</string>
    <string name="cartDeleteProduct">Are you sure you want to delete the product?</string>
    <string name="paymentTitle">Payment</string>
    <string name="paymentProduct">Product</string>
    <string name="paymentQuantity">Quantity</string>
    <string name="paymentPrice">Price</string>
    <string name="paymentTotalPrice">Total Price</string>
    <string name="n_dot">N.</string>
    <string name="date">Date</string>
    <string name="amount_ht">Amount HT</string>
    <string name="order_status">Status</string>
    <string name="order_details">Details</string>
    <string name="we_advise_you_to_buy_today">We advise you to buy today</string>
    <string name="current_price">current price:</string>
    <string name="average_price_year">average price year:</string>
    <string name="price_trend">Price trend</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="week">week</string>
    <string name="currently_there_is_no_data">Currently there is no data.</string>
    <string name="cart_is_empty">Cart is empty</string>
</resources>