<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/catalog"
        android:enabled="true"
        android:icon="@drawable/catalog_unsl"
        android:title="@string/catalog"
        app:showAsAction="always" />
    <item
        android:id="@+id/research"
        android:enabled="true"
        android:icon="@drawable/reche_unsl"
        android:title="@string/research"
        app:showAsAction="always" />
    <item
        android:id="@+id/orders"
        android:enabled="true"
        android:icon="@drawable/comman_unsl"
        android:title="@string/orders"
        app:showAsAction="always" />
    <item
        android:id="@+id/myProducts"
        android:enabled="true"
        android:icon="@drawable/my_product_unsl"
        android:title="@string/my_products"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/para_unsl"
        android:title="@string/account"
        app:showAsAction="always" />
</menu>