<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/receivedSwipe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.57" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/g5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/hash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="@string/n_dot"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/g1"
            app:layout_constraintRight_toLeftOf="@id/g2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="@string/date"
            android:textAllCaps="true"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/g2"
            app:layout_constraintRight_toLeftOf="@id/g3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="@string/amount_ht"
            android:textAllCaps="true"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/g3"
            app:layout_constraintRight_toLeftOf="@id/g4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="@string/order_status"
            android:textAllCaps="true"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/g4"
            app:layout_constraintRight_toLeftOf="@id/g5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            android:text="@string/order_details"
            android:textAllCaps="true"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/g5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/receivedRecycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAmount" />

        <ImageView
            android:id="@+id/ivListNull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/product"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvListNull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="100dp"
            android:text="@string/currently_there_is_no_data"
            android:textColor="@color/splashColor"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivListNull" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>