<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginBottom="@dimen/_4sdp"
    android:background="@color/white"
    android:paddingBottom="@dimen/_8sdp">


    <TextView
        android:id="@+id/tvPriceTrend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/price_trend"
        android:textColor="@color/labelColor"
        android:textSize="@dimen/medium16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/centerConstraint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#cae6bd"
        android:padding="@dimen/_5sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPriceTrend">


        <TextView
            android:id="@+id/tvSellerChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/tick1"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/we_advise_you_to_buy_today"
            android:textColor="@color/signUpButtonColor"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/btnsLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/centerConstraint">


        <Button
            android:id="@+id/btnAnnual"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button"
            android:padding="2dp"
            android:text="@string/year"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/btnMonthly"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button_gray"
            android:padding="2dp"
            android:text="@string/month"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <Button
            android:id="@+id/btnWeekly"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="5dp"
            android:background="@drawable/round_button_gray"
            android:padding="2dp"
            android:text="@string/week"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />


    </LinearLayout>


    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/lineChartView"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnsLinear"
        app:layout_constraintWidth_min="@dimen/_3sdp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loaderConstraint"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnsLinear">


        <com.tuyenmonkey.mkloader.MKLoader
            android:id="@+id/mkLoader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mk_color="@color/splashColor"
            app:mk_type="FishSpinner" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="lineChartView,loaderConstraint" />

    <TextView
        android:id="@+id/tvActualPriceAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="---"
        android:textAlignment="textEnd"
        android:textColor="@color/red"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/tvNormalPriceAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="---"
        android:textAlignment="textEnd"
        android:textColor="@color/splashColor"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvActualPriceAnswer" />


    <TextView
        android:id="@+id/tvActualPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/current_price"
        android:textAlignment="textEnd"
        android:textColor="@color/red"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintRight_toLeftOf="@id/tvActualPriceAnswer"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <TextView
        android:id="@+id/tvNormalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/average_price_year"
        android:textAlignment="textEnd"
        android:textColor="@color/splashColor"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintRight_toLeftOf="@id/tvNormalPriceAnswer"
        app:layout_constraintTop_toBottomOf="@id/tvActualPriceAnswer" />


</androidx.constraintlayout.widget.ConstraintLayout>