<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cartConstraintEmpty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/white"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvCartBasket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cartTitle"
            android:textAllCaps="true"
            android:textColor="@color/signInButtonColor"
            android:textSize="@dimen/medium18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.62" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />


        <TextView
            android:id="@+id/tvCartProduct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cartProduct"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/guideline1"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/tvCartBasket" />

        <TextView
            android:id="@+id/tvCartQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cartQuantity"
            android:textAllCaps="false"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/guideline2"
            app:layout_constraintRight_toLeftOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@id/tvCartBasket" />

        <TextView
            android:id="@+id/tvCartPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cartPrice"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/edittextHintColor"
            android:textSize="@dimen/small10sp"
            app:layout_constraintLeft_toRightOf="@id/guideline3"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toBottomOf="@id/tvCartBasket" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/ivListNull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/empty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvListNull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:text="@string/cart_is_empty"
        android:textColor="@color/splashColor"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivListNull" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartConstraintEmpty" />

</androidx.constraintlayout.widget.ConstraintLayout>